# TIR

./: pyproject.toml
tests/: conftest.py
tests/test_data_segment.py/: test_data_segment.py
tests/tests_compiler/: test_1.py  test_1_output.elf  test_1v2_output.elf  test_1v_output.elf
tests/tests_compiler.py/: test_1.py
tests/tests_compiler/test_output/: test_1_test_basic_add_one_side_var.elf  test_1_test_basic_if_else_block.elf  test_1_test_basic_signed_mul.elf  test_1_test_basic_sub.elf  test_1_test_basic_unsigned_div.elf  test_1_test_very_basic_compiler_operation.elf  test_basic_add.elf
tests/tests_parser/: test_BSS.py  test_DATA.py  test_RODATA.py  test_TEXT.py  test_function_call.py  test_grammar.py  test_if.py  test_if_else_block.py  test_memory_allocator.py
tir/: TIR.py
tir/compiler/: ELF.py  assembler.py  compiler.py  symbolizer.py
tir/parser/: Grammar.txt  parser.py  parsergenerator.py
tir/x86_64/: utils.py  x86_64.py
